--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.11"
 MechanicalSoup = "^1.3.0"
 beautifulsoup4 = "^4.12.3"
 httpx = "^0.27.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
